--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,13 @@ dependencies:
   flutter_svg: ^1.1.0
   get_storage: ^2.0.3
   auto_size_text: ^3.0.0
+  dio: ^4.0.6
+  freezed: ^2.0.3+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
